tests/contract_testcases/polkadot/functions/global_functions_01.sol

        function x();
        
// ---- Expect: diagnostics ----
// error: 2:9-21: missing function body
